--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<script src="js/leaflet.js"></script>
 		<script src="js/metro-lga.js"></script>
 		<script src="js/leaflet.ajax.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="js/papaparse.min.js"></script>
 		<link rel="stylesheet" href="css/leaflet.css" />
         <link rel="stylesheet" href="css/mapsyle.css" />
 	</head>
