--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/leaflet.ajax.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/papaparse.min.js"></script>
+    <script src="js/chroma.min.js"></script>
     <link rel="stylesheet" href="css/leaflet.css" />
     <link rel="stylesheet" href="css/mapsyle.css" />
 </head>
